Simple validation, better error format
